@@ -6,10 +6,12 @@ import lombok.AccessLevel;
 import lombok.Builder;
 import lombok.NoArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class UserPrincipal {
@@ -23,7 +25,7 @@ public class UserPrincipal {
 
         @Override
         public Collection<? extends GrantedAuthority> getAuthorities() {
-            return Collections.emptyList();
+            return List.of(new SimpleGrantedAuthority(user.getUserInfo().getType().toString()));
         }
 
         @Override
@@ -71,7 +73,7 @@ public class UserPrincipal {
 
         @Override
         public Collection<? extends GrantedAuthority> getAuthorities() {
-            return Collections.emptyList();
+            return List.of(new SimpleGrantedAuthority(user.getUserInfo().getType().toString()));
         }
 
         @Override
